# Programming_C_9

./: CMakeLists.txt  LICENSE  README.md
10_Variable_scopes/: Makefile  processes.c  processes.h  taskmanager.c
11_Pointers/: Makefile  bubblesort.c  compare.c  compare.h  fgets_remove_nl.c  scan_ptr.c  swap_ptr.c  swap_ptr.h
12_Pointers_and_Arays/: matrix_print.c  ptr_sort_array.c  string_length.c
12_Pointers_and_Arrays/: str_half.c
13_Dynamic_Memory/: student_gradebook.c
14_Pointer_Arrays/: class_gradebook.c
15_Data_Structures/: gradebook.c  reduce.c  union.c  weekdays.c
16_Data_Structures_2/: causes.c  family_tree.c
17_Dynamic_Array/: DynamicArray.c  DynamicArray.h  Makefile  donors.c  utils.h
18_Linked_List/: Makefile  linked_list.c  linked_list.h  tasklist.c
19_Files/: Makefile  library.c  library.txt  linked_list.h
1_IDE_Debugging/: 1-eachcharonnewline.c  2-printoddnumbersfrom2darr.c  3-sortedevenindexesproduct.c  4-binsearchnames.c  5-remdup.c
20_Binary_Files/: statistics.c
21_File_Serialization/: read_employees.c  write_employees.c
4_MACROS/: 1-array_macro.c  2-compare_bigger_macro.c  3-debug_helper_macro.c  4-define_command.c  5-swap_macro.c  6-sort_macro.c
5_Conditional_Compilation/: 1-debug_macro.c  2-powers_of_2_auto_arr.c  3-os_based_sort.c  4-school.c  person.h  schoolclass.h  schoolroom.h
6_Compilation/: 1-square_macro.c  2-find_LCM.c  2-find_LCM.s  3-commands.txt  3-main.c  3-transformation.c  3-transformation.h  4-commands.txt  4-fourth_pow.c  5-commands.txt  5-main.c  5-maths_lib.c  5-maths_lib.h  test
7_Make/: Makefile  help.c  mystrings.c  mystrings.h  strcompare.c  strconcat.c  strlength.c
7_Representing_data_in_memory/: 1-type_info.c
8_Representing_data_in_memory/: 1-type_info.c  Makefile  safeadd.c  safedivide.c  safeint.c  safeint.h  safemultiply.c  safesubtract.c  util.h
9_Typecasting_and_Bitwise_operations/: Makefile  main.c  quadratic_roots.c  quadratic_roots.h  smart_lights.c
Test_1_Preparation/: task5.c
Test_1_Preperation/: task1.c  task2.c  task3.c  task4.c  task6.c  task7.c
