cmake_minimum_required(VERSION 3.29)
project(Programming_C_9 C)

set(CMAKE_C_STANDARD 11)

add_executable(task1 "Test_1_Preparation/task1.c")
add_executable(task2 "Test_1_Preparation/task2.c")
add_executable(task3 "Test_1_Preparation/task3.c")
add_executable(task4 "Test_1_Preparation/task4.c")
add_executable(task5 "Test_1_Preparation/task5.c")
add_executable(task6 "Test_1_Preparation/task6.c")
add_executable(task7 "Test_1_Preparation/task7.c")
add_executable(1-eachcharonnewline 1_IDE_Debugging/1-eachcharonnewline.c)
add_executable(2-printoddnumbersfrom2darr 1_IDE_Debugging/2-printoddnumbersfrom2darr.c)
add_executable(3-sortedevenindexesproduct 1_IDE_Debugging/3-sortedevenindexesproduct.c)
add_executable(4-binsearchnames 1_IDE_Debugging/4-binsearchnames.c)
add_executable(5-remdup 1_IDE_Debugging/5-remdup.c)
add_executable(1-array_macro.c 4_MACROS/1-array_macro.c)
add_executable(2-compare_bigger_macro 4_MACROS/2-compare_bigger_macro.c)
add_executable(3-debug_helper_macro 4_MACROS/3-debug_helper_macro.c)
add_executable(4-define_command 4_MACROS/4-define_command.c)
add_executable(5-swap_macro 4_MACROS/5-swap_macro.c)
add_executable(6-sort_macro 4_MACROS/6-sort_macro.c)
add_executable(1-debug_macro 5_Conditional_Compilation/1-debug_macro.c)
add_executable(2-powers_of_2_auto_arr 5_Conditional_Compilation/2-powers_of_2_auto_arr.c)
add_executable(3-os_based_sort 5_Conditional_Compilation/3-os_based_sort.c)
add_executable(4-school 5_Conditional_Compilation/4-school.c
        5_Conditional_Compilation/person.h
        5_Conditional_Compilation/schoolclass.h
        5_Conditional_Compilation/schoolroom.h)
